# sdk

runtime/platform/apple/framework/: BUILD.gn  create_framework.dart
runtime/platform/apple/framework/Headers/: Dart.h  DartVM.h
runtime/platform/apple/framework/Sources/: DartVM.mm
samples/embedder/: send_string.dart
